<resources>
    <string name="app_name">Praktika</string>
    <string name="search_hint">Искать описания</string>
    <string name="cart">Корзина</string>
    <string name="cart_title">Корзина</string>
    <string name="empty_cart">Корзина пока пуста</string>
    <string name="total">Сумма</string>
    <string name="checkout">Перейти к оформлению заказа</string>
    <string name="create_project">Создать проект</string>
    <string name="confirm">Подтвердить</string>
    <string name="my_orders">Мои заказы</string>
    <string name="notifications">Уведомления</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="logout">Выход</string>
    <string name="welcome">👋 Добро пожаловать!</string>
    <string name="login_subtitle">Войдите чтобы пользоваться функциями приложения</string>
    <string name="email_label">Вход по E-mail</string>
    <string name="password_label">Пароль</string>
    <string name="next">Далее</string>
    <string name="register">Зарегистрироваться</string>
    <string name="or_login_with">Или войдите с помощью</string>
    <string name="login_vk">Войти с VK</string>
    <string name="login_yandex">Войти с Yandex</string>
    <string name="create_profile">Создание профиля</string>
    <string name="profile_description">Без профиля вы не сможете создавать свои проекты.\n\nВ профиле будут храниться результаты проектов и ваши описания.</string>
    <string name="first_name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="last_name">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="gender">Пол</string>
    <string name="email">Почта</string>
    <string name="create_password_title">👋 Создание пароля</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="save">Сохранить</string>
    <string name="enter_pin">Вход</string>
    <string name="create_pin_title">Создайте пароль</string>
    <string name="pin_description">Для защиты ваших персональных данных</string>
    <string name="products_empty">Товары не найдены</string>
    <string name="add_to_cart">Добавить</string>
    <string name="remove">Убрать</string>
    <string name="to_cart">В корзину</string>
    <string name="all">Все</string>
    <string name="women">Женщинам</string>
    <string name="men">Мужчинам</string>
    <string name="promo_best_price">Лучшая цена</string>
    <string name="promo_week_products">Товары недели</string>
    <string name="promo_new_items">Новые позиции</string>
    <string name="promo_catalog_update">Пополнение каталога</string>
    <string name="promo_title">Акции и новости</string>
    <string name="catalog_title">Каталог описаний</string>
    <string name="profile_title">Профиль</string>
    <string name="home_title">Главная</string>
    <string name="projects_title">Проекты</string>
    <string name="empty_projects">Пока нет проектов</string>
    <string name="back">Назад</string>
    <string name="clear_cart">Очистить корзину</string>
    <string name="close">Закрыть</string>
    <string name="description">Описание</string>
    <string name="consumption">Примерный расход:</string>
    <string name="add_to_cart_for">Добавить за</string>
    <string name="remove_from_cart">Убрать из корзины</string>
    <string name="open">Открыть</string>
    <string name="add">Добавить</string>
    <string name="remove_short">Убрать</string>
    <string name="type">Тип</string>
    <string name="project_name">Название проекта</string>
    <string name="date_start">Дата начала</string>
    <string name="date_end">Дата окончания</string>
    <string name="source">Источник</string>
    <string name="category">Категория</string>
    <string name="project_for">Кому</string>
</resources>